kubernetes/apps/network/echo-server/app/ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-server-external
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik-ext.damacus.io
spec:
  ingressClassName: external
  rules:
    - host: echo-server.damacus.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 8080
  tls:
    - hosts:
        - echo-server.damacus.io
